tüm controllerlar, dto'lar ve viewler halloldu

--- a/SignalRWebUI/Properties/launchSettings.json
+++ b/SignalRWebUI/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -12,7 +12,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7187;http://localhost:5041",
+      "applicationUrl": "https://localhost:7187;http://localhost:5040",//port 5041'den 5040'a alındı. 5041 - 5140 arası rezerve etmiş windows
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
